Implement uninitialization for GPT

This makes it possible to format a GPT drive back to MBR without too
much effort.

Fixes #8823.